# circuitpython

./: pyproject.toml
ports/nrf/boards/nice_nano_rzyns/: mpconfigboard.mk
