[tool.poetry]
name = "circuitpython"
version = "8.0.0-beta.3"
description = ""
authors = ["Adafruit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cascadetoml = "^0.3.3"
jinja2 = "^3.1.2"
typer = "^0.6.1"
sh = "^1.14.3"
click = "^8.1.3"
cpp-coveralls = "^0.4.2"
requests = "^2.28.1"
requests-cache = "^0.9.7"
polib = "^1.1.1"
pyyaml = "^6.0"
black = "^22.10.0"
pre-commit = "^2.20.0"
intelhex = "^2.3.0"
pyelftools = "^0.29"
adafruit-circuitpython-typing = "^1.8.2"
cryptography = "^38.0.1"
minify-html = "^0.10.3"
jsmin = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
